--- a/WorldCities/src/app/cities/city-edit.component.html
+++ b/WorldCities/src/app/cities/city-edit.component.html
@@ -29,7 +29,8 @@
             <mat-label>Latitude:</mat-label>
             <input matInput formControlName="lat" required placeholder="Insert latitude">
 
-            <mat-error *ngFor="let error of getErrors(form.get('lat')!,'Latitude', { 'pattern' : 'requires a positive or negative number with 0-4 decimal values' })">
+            <mat-error
+                *ngFor="let error of getErrors(form.get('lat')!,'Latitude', { 'pattern' : 'requires a positive or negative number with 0-4 decimal values' })">
                 {{error}}
             </mat-error>
 
@@ -40,17 +41,18 @@
             <mat-label>Longitude:</mat-label>
             <input matInput formControlName="lon" required placeholder="Insert longitude">
 
-            <mat-error *ngFor="let error of getErrors(form.get('lon')!, 'Longitude', { 'pattern' : 'requires a positive or negative number with 0-4 decimal values' })">
-            {{error}}
+            <mat-error
+                *ngFor="let error of getErrors(form.get('lon')!, 'Longitude', { 'pattern' : 'requires a positive or negative number with 0-4 decimal values' })">
+                {{error}}
             </mat-error>
 
         </mat-form-field>
 
         <!-- Country -->
-        <mat-form-field *ngIf="countries">
+        <mat-form-field *ngIf="countries | async as result">
             <mat-label>Select a Country...</mat-label>
             <mat-select id="countryId" formControlName="countryId">
-                <mat-option *ngFor="let country of countries" [value]="country.id">
+                <mat-option *ngFor="let country of result" [value]="country.id">
                     {{country.name}}
                 </mat-option>
             </mat-select>
@@ -70,4 +72,36 @@
             </button>
         </div>
     </form>
+
+    <!-- Form debug info panel -->
+    <!-- <div class="info">
+        <div class="info-header">Form Debug Info</div>
+        <div class="info-body">
+            <div class="info-label">
+                Form Value:
+            </div>
+            <div class="info-value">
+                {{ form.value | json }}
+            </div>
+            <hr />
+            <div class="info-label">
+                Form Status:
+            </div>
+            <div class="info-value">
+                {{ form.status | json }}
+            </div>
+        </div>
+    </div> -->
+
+    <!-- Form activity log panel -->
+    <!-- <div class="info">
+        <div class="info-header">Form Activity Log</div>
+        <div class="info-body">
+            <div class="info-value">
+                <span *ngIf="activityLog" [innerHTML]="activityLog">
+                </span>
+            </div>
+        </div>
+    </div> -->
+
 </div>
