duzo juz dziala, tylko dodac widoki dla resetu hasla i finito

--- a/WorldCities/src/app/home/home.component.html
+++ b/WorldCities/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<h1>WorldCities</h1>
+<!-- <h1>WorldCities</h1>
 <p>
     A sample web application to demonstrate
     how to interact with ASP.NET, Angular,
@@ -6,4 +6,4 @@
 </p>
 
 <img src="/assets/img/home.jpg" alt="WorldCities"
-class="home-cover" />
+class="home-cover" /> -->
